--- a/www/assets/styles/style.css
+++ b/www/assets/styles/style.css
@@ -61,7 +61,9 @@ body {
 /* Menu */
 #top {
   height: 68px;
-  background-color: #3e90ca; }
+  background-color: #3e90ca;
+  position: relative;
+  z-index: 10; }
   #top h1 {
     font-size: 22px;
     font-weight: 600;
@@ -94,6 +96,7 @@ body {
       margin-right: 0;
       margin-left: 10px; }
 
+/* Userbar */
 #userBar {
   height: 104px;
   background-color: #212a31; }
@@ -142,7 +145,8 @@ body {
     *display: inline;
     *zoom: 1;
     height: 104px;
-    line-height: 104px; }
+    line-height: 104px;
+    border-right: 1px solid #8093a2; }
     #userBar .infos .stat {
       display: inline-block;
       *display: inline;
@@ -175,6 +179,51 @@ body {
         top: 50%; }
       #userBar .infos .stat:first-child:before {
         display: none; }
+  #userBar #post {
+    background: url("../images/post.png") no-repeat center center #3e90ca;
+    height: 50px;
+    width: 50px;
+    border-radius: 25px;
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 40px;
+    cursor: pointer; }
+
+#post-pop {
+  background-color: #212a31;
+  border-top: 1px solid #8093a2;
+  padding: 0 20px;
+  height: 0;
+  overflow: hidden;
+  transition: height .5s;
+  -webkit-transition: height .5s;
+  -moz-transition: height .5s; }
+  #post-pop.expand {
+    height: 170px; }
+  #post-pop textarea {
+    display: block;
+    margin-top: 20px;
+    max-width: calc(100% - 20px);
+    min-width: calc(100% - 20px);
+    max-height: 75px;
+    min-height: 75px;
+    background-color: rgba(0, 0, 0, 0.3);
+    padding: 10px;
+    color: #fff;
+    font-size: 14px;
+    font-family: 'open sans';
+    border: none; }
+  #post-pop input {
+    background: #3e90ca;
+    padding: 7px 15px;
+    border: none;
+    border-radius: 20px;
+    color: #fff;
+    font-weight: 600;
+    font-size: 16px;
+    float: right;
+    margin: 10px 0;
+    cursor: pointer; }
 
 /* Container */
 #container h2 {
@@ -214,10 +263,7 @@ body {
     *zoom: 1;
     float: right;
     position: absolute;
-    top: 0;
-    right: 0;
-    margin-left: 95px;
-    margin-top: 17px; }
+    top: 15px; }
     #container #messageContainer .msg .msgContent .name {
       font-weight: 600;
       color: #4f5d66; }
@@ -279,3 +325,54 @@ body {
     #container #sidebar #copyright span {
       font-weight: bold;
       line-height: 30px; }
+
+/* Login / Signup */
+#wallpaper {
+  background: url("../images/background.jpg") no-repeat center center;
+  position: absolute;
+  top: 65px;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  filter: blur(3px);
+  -webkit-filter: blur(3px); }
+
+#form {
+  position: relative;
+  z-index: 10;
+  width: 600px;
+  padding: 20px;
+  margin: 100px auto 0 auto;
+  background-color: rgba(0, 0, 0, 0.5); }
+  #form h3 {
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 15px;
+    margin-top: 20px;
+    color: #ffffff; }
+  #form form input {
+    display: block;
+    height: 20px;
+    width: 100%;
+    padding: 7px 0;
+    text-indent: 10px;
+    border: none;
+    margin: 8px 0;
+    border-radius: 3px; }
+    #form form input[type="submit"] {
+      padding: 10px 0;
+      height: auto;
+      margin-bottom: 20px;
+      background-color: #3e90ca;
+      color: #fff;
+      font-size: 18px;
+      font-weight: 600;
+      cursor: pointer; }
+      #form form input[type="submit"].first {
+        margin-bottom: 40px; }
+      #form form input[type="submit"]:hover {
+        opacity: 0.9; }
