--- a/www/assets/styles/style.css
+++ b/www/assets/styles/style.css
@@ -376,3 +376,6 @@ body {
         margin-bottom: 40px; }
       #form form input[type="submit"]:hover {
         opacity: 0.9; }
+
+#templating {
+  display: none; }
