New template demo + add twig template demo

--- a/app/templates/hello/world.haml
+++ b/app/templates/hello/world.haml
@@ -4,6 +4,5 @@
     %meta{:charset => 'UTF-8'}
     %title Walrus welcome page
   %body
-    %h1 Hello World
-    %p Welcome on Walrus Framework
-    %p=$_ENV['W']['VERSION']
+    %h1=$speak
+    %p Welcome on Walrus Framework.
