Mise en place du layout

--- a/app/templates/home/index.twig
+++ b/app/templates/home/index.twig
@@ -1,10 +1,14 @@
-Welcome Home
-{% if posts is defined  %}
-    {% for post in posts %}
-        <br>
-        title : <a href="/post/{{ post.properties.id }}">{{ post.properties.title }}</a>
-        <br>
-    {% endfor %}
-{% else %}
-    No Posts
-{% endif %}
+{% extends "templates/layout/layout.twig" %}
+
+{% block content %}
+	Welcome Home
+	{% if posts is defined  %}
+	    {% for post in posts %}
+	        <br>
+	        title : <a href="/post/{{ post.properties.id }}">{{ post.properties.title }}</a>
+	        <br>
+	    {% endfor %}
+	{% else %}
+	    No Posts
+	{% endif %}
+{% endblock %}
