--- a/app/templates/post/edit.twig
+++ b/app/templates/post/edit.twig
@@ -1,12 +1,16 @@
-<h3>Edit Post</h3>
+{% extends "layout/layout.twig" %}
 
-<form action="/post/{{ post.id }}/edit" method="POST">
-    <input type="text" name="title" placeholder="title" value="{{ post.title }}"/>
-    <br>
-    {% if errors['title.empty'] is defined %}
-        <span style="color:#ff0000;">{{ errors['title.empty'] }}</span>
-    {% endif %}
-    <br>
-    <textarea name="content">{{ post.content }}</textarea>
-    <input type="submit" value="submit"/>
-</form>
+{% block content %}
+	<h3>Edit Post</h3>
+
+	<form action="/post/{{ post.id }}/edit" method="POST">
+	    <input type="text" name="title" placeholder="title" value="{{ post.title }}"/>
+	    <br>
+	    {% if errors['title.empty'] is defined %}
+	        <span style="color:#ff0000;">{{ errors['title.empty'] }}</span>
+	    {% endif %}
+	    <br>
+	    <textarea name="content">{{ post.content }}</textarea>
+	    <input type="submit" value="submit"/>
+	</form>
+{% endblock %}
