--- a/app/templates/user/signup.twig
+++ b/app/templates/user/signup.twig
@@ -1,6 +1,21 @@
-{% extends "layout/layout.twig" %}
-
-{% block content %}
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Walrus Form</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="/assets/styles/main.css">
+</head>
+<body>
+  <div style="text-align:center">
+    <img src="/assets/images/logo.png">
+    <br>
+    <nav>
+      <a href="/">Home</a>
+      <a href="/post/create">Cr&eacute;er un post</a>
+      <a href="/signin">Se connecter</a>
+      <a href="/signup">S'inscrire</a>
+    </nav>
+  </div>
   <h3>Signup</h3>
 
   <form action="/signup" method="POST">
@@ -17,4 +32,5 @@
     <input type="password" name="cpassword" placeholder="Password" value=""/>
     <input type="submit" value="Signup"/>
   </form>
-{% endblock %}
+</body>
+</html>
