--- a/app/templates/user/signin.twig
+++ b/app/templates/user/signin.twig
@@ -3,22 +3,22 @@
 <head>
 	<title>Walrus Form</title>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="/assets/styles/main.css">
+	<link rel="stylesheet" type="text/css" href="/walrus/assets/styles/main.css">
 </head>
 <body>
 	<div style="text-align:center">
 	  	<img src="/assets/images/logo.png">
 	  	<br>
 	  	<nav>
-		    <a href="/">Home</a>
-		    <a href="/post/create">Cr&eacute;er un post</a>
-		    <a href="/signin">Se connecter</a>
-		    <a href="/signup">S'inscrire</a>
+		    <a href="/Walrus/">Home</a>
+		    <a href="/Walrus/post/create">Cr&eacute;er un post</a>
+		    <a href="/Walrus/signin">Se connecter</a>
+		    <a href="/Walrus/signup">S'inscrire</a>
 	  	</nav>
 	</div>
 	<h3>Login</h3>
 
-	<form action="/signin" method="POST">
+	<form action="/Walrus/signin" method="POST">
 	  <input type="hidden" name="type" value="login"/>
 	  <input type="text" name="pseudo" placeholder="Pseudo" value=""/>
 	  <input type="password" name="password" placeholder="Password" value=""/>
