--- a/app/templates/user/signup.twig
+++ b/app/templates/user/signup.twig
@@ -7,18 +7,18 @@
 </head>
 <body>
   <div style="text-align:center">
-    <img src="/assets/images/logo.png">
+    <img src="/Walrus/assets/images/logo.png">
     <br>
     <nav>
-      <a href="/">Home</a>
-      <a href="/post/create">Cr&eacute;er un post</a>
-      <a href="/signin">Se connecter</a>
-      <a href="/signup">S'inscrire</a>
+      <a href="/Walrus/">Home</a>
+      <a href="/Walrus/post/create">Cr&eacute;er un post</a>
+      <a href="/Walrus/signin">Se connecter</a>
+      <a href="/Walrus/signup">S'inscrire</a>
     </nav>
   </div>
   <h3>Signup</h3>
 
-  <form action="/signup" method="POST">
+  <form action="/Walrus/signup" method="POST">
     <input type="hidden" name="type" value="signup"/>
     <input type="text" name="name" placeholder="Name" value=""/>
     <input type="text" name="pseudo" placeholder="Pseudo" value=""/>
