--- a/app/templates/post/edit.twig
+++ b/app/templates/post/edit.twig
@@ -10,15 +10,15 @@
 		<img src="/assets/images/logo.png">
 		<br>
 		<nav>
-	    	<a href="/">Home</a>
-	    	<a href="/post/create">Cr&eacute;er un post</a>
-	    	<a href="/signin">Se connecter</a>
-	    	<a href="/signup">S'inscrire</a>
+	    	<a href="/Walrus/">Home</a>
+	    	<a href="/Walrus/post/create">Cr&eacute;er un post</a>
+	    	<a href="/Walrus/signin">Se connecter</a>
+	    	<a href="/Walrus/signup">S'inscrire</a>
 	  	</nav>
 	</div>
 	<h3>Edit Post</h3>
 
-	<form action="/post/{{ post.id }}/edit" method="POST">
+	<form action="/Walrus/post/{{ post.id }}/edit" method="POST">
 	    <input type="text" name="title" placeholder="title" value="{{ post.title }}"/>
 	    <br>
 	    {% if errors['title.empty'] is defined %}
