--- a/app/templates/post/new.twig
+++ b/app/templates/post/new.twig
@@ -3,22 +3,22 @@
 <head>
 	<title>Walrus Form</title>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="/assets/styles/main.css">
+	<link rel="stylesheet" type="text/css" href="/Walrus/assets/styles/main.css">
 </head>
 <body>
 	<div style="text-align:center">
-		<img src="/assets/images/logo.png">
+		<img src="/Walrus/assets/images/logo.png">
 		<br>
 	  	<nav>
-	    	<a href="/">Home</a>
-	    	<a href="/post/create">Cr&eacute;er un post</a>
-	    	<a href="/signin">Se connecter</a>
-	    	<a href="/signup">S'inscrire</a>
+	    	<a href="/Walrus/">Home</a>
+	    	<a href="/Walrus/post/create">Cr&eacute;er un post</a>
+	    	<a href="/Walrus/signin">Se connecter</a>
+	    	<a href="/Walrus/signup">S'inscrire</a>
 	  	</nav>
 	</div>
 	<h3>New Post</h3>
 
-	<form action="/post/create" method="POST">
+	<form action="/Walrus/post/create" method="POST">
 	  <input type="text" name="title" placeholder="title" value=""/>
 	  <br>
 	    {% if errors['title.empty'] is defined %}
