fix twig extends

--- a/app/templates/project/index.html.twig
+++ b/app/templates/project/index.html.twig
@@ -1,1 +1,6 @@
-{% extends layout.html.twig %}
+{% extends "layouts/layout.html.twig" %}
+
+{% block title %}Projects{% endblock %}
+
+{% block body %}
+{% endblock %}
