--- a/app/templates/project/index.html.twig
+++ b/app/templates/project/index.html.twig
@@ -4,4 +4,5 @@
 
 {% block body %}
     <h1>Here are your projects</h1>
+    <a href="/DoctorTask/project/create">Create a new project</a>
 {% endblock %}
