bug fix + model update

--- a/app/templates/project/index.html.twig
+++ b/app/templates/project/index.html.twig
@@ -3,6 +3,10 @@
 {% block title %}Projects{% endblock %}
 
 {% block body %}
-    <h1>Here are your projects</h1>
+    <h1>Projects</h1>
+    <h2>These are your projects</h2>
     <a href="/DoctorTask/project/create">Create a new project</a>
+
+    <h2>Your are a contributor on these projects</h2>
+
 {% endblock %}
