update routes + add delete

--- a/app/templates/project/show.html.twig
+++ b/app/templates/project/show.html.twig
@@ -4,4 +4,5 @@
 
 {% block body %}
     <h1>Showing project {{ title }}</h1>
+    <a href="/DoctorTask/project/delete/{{ id }}">Delete this project</a>
 {% endblock %}
